Add archetype system and clade tracking for evolutionary lineages
This replaces hard-coded predator/prey types with config-defined archetypes
and adds clade tracking to follow evolutionary divergence over time.

Key changes:
- Add ArchetypeConfig (name, diet) and CladeConfig (split thresholds) to config
- Organism component gains FounderArchetypeID (immutable), Diet (heritable 0-1),
  and CladeID (lineage identifier)
- MutateSparse now returns avgAbsDelta for clade split decisions
- Reproduction includes diet mutation and clade split logic:
  - Random split (0.5% per birth)
  - Large neural mutation (avgAbsDelta > threshold)
  - Diet drift (> threshold from parent)
- Telemetry tracks active_clades in WindowStats and clade info in HallOfFame
- spawnEntity now takes archetypeID instead of Kind

Backwards compatibility: Kind field preserved and derived from Diet >= 0.5.
Configs without archetypes get default grazer/hunter. All existing tests pass.

This is Phase 1 of a larger plan. See docs/archetype-clade-roadmap.md for
Phases 2-4 covering diet-scaled energy interpolation, unified sensor channels,
and eventual removal of Kind-based branching.

--- a/config/defaults.yaml
+++ b/config/defaults.yaml
@@ -293,3 +293,25 @@ particles:
   flow_scale: 2.0            # Curl noise frequency (lower = larger features)
   flow_octaves: 2            # FBM detail level (fewer = smoother currents)
   flow_evolution: 0.03       # Temporal drift rate for flow field (lower = slower change)
+
+# -----------------------------------------------------------------------------
+# Archetypes (Founder Templates)
+# Define organism templates that determine initial diet and behavior tendencies.
+# Diet is a continuous heritable trait: 0 = pure herbivore, 1 = pure carnivore.
+# Archetypes are immutable; diet drifts through mutation.
+# -----------------------------------------------------------------------------
+archetypes:
+  - name: grazer
+    diet: 0.0                  # Pure herbivore (prey)
+  - name: hunter
+    diet: 1.0                  # Pure carnivore (predator)
+
+# -----------------------------------------------------------------------------
+# Clade Tracking
+# Clades are lineage identifiers that track evolutionary divergence.
+# Splits occur randomly, or when mutations cause significant behavioral change.
+# -----------------------------------------------------------------------------
+clades:
+  split_chance: 0.005          # Random split probability per birth (0.5%)
+  delta_threshold: 0.015       # avgAbsDelta threshold for forced split
+  diet_threshold: 0.05         # Diet drift threshold for forced split
