Add diet-based energy interpolation (Phase 2)
Energy economics now vary smoothly with diet instead of binary prey/predator
branching. Diet interpolation is the only mode - no legacy fallback.

Key changes:
- Add EnergyInterpolationConfig with grazing_diet_cap, hunting_diet_floor
- UpdateEnergy uses diet to interpolate base/move/accel costs between prey/pred values
- GrazingEfficiency: 1.0 at diet=0, falls to 0 at grazing_diet_cap (default 0.3)
- HuntingEfficiency: 0 below hunting_diet_floor (default 0.7), ramps to 1.0 at diet=1
- Hunting uses diet threshold: can only eat targets with diet at least 0.2 lower
- Bite reward scaled by hunting efficiency
- Removed Kind parameter from UpdateEnergy - diet is now the sole input

Default config creates selection pressure toward specialization via a "dead zone"
from diet 0.3-0.7 where neither grazing nor hunting is effective. For omnivores,
set grazing_diet_cap=0.6 and hunting_diet_floor=0.4 to create overlap.

--- a/config/defaults.yaml
+++ b/config/defaults.yaml
@@ -139,6 +139,13 @@ energy:
     transfer_efficiency: 0.85 # Fraction of taken energy predator actually receives
     digest_time: 0.8         # Seconds after a kill before predator can bite again
     accel_cost: 0.010        # Energy cost multiplier for thrust (acceleration penalty)
+  # Diet-based interpolation between prey/predator energy economics
+  # Costs and abilities scale smoothly with diet instead of binary switching
+  interpolation:
+    grazing_diet_cap: 0.3    # Diet above this = no grazing benefit (0.0-1.0)
+                             # At diet=0: full grazing, at diet=0.3+: no grazing
+    hunting_diet_floor: 0.7  # Diet below this = no hunting benefit (0.0-1.0)
+                             # At diet=0.7-: no hunting, at diet=1.0: full hunting
 
 # -----------------------------------------------------------------------------
 # Resource Field
