Add detritus grid to particle resource field (energy economy step 1)
First step of the energy economy spec (docs/energy_economy.md): add a
detritus grid that runs alongside the existing resource grid. Detritus
is the intermediate recycling buffer between organism death/waste and
new resource, providing ecosystem inertia and enabling future scavenger
niches.

- Add Det[] float32 grid to ParticleResourceField (same resolution as Res)
- DepositDetritus(x, y, amount) splats detritus at world coords (bilinear)
- StepDetritus(dt) decays detritus into resource with configurable efficiency;
  remainder is returned as heat loss (unused until HeatLossAccum in step 2)
- TotalMass() now includes detritus; add TotalResMass/TotalDetMass helpers
- DetData()/SampleDetritus() accessors for future telemetry and rendering
- Add DetritusConfig with decay_rate=0.05, decay_efficiency=0.50,
  carcass_fraction=0.70 (carcass_fraction used in step 5)

The grid is live but inert—nothing deposits into it yet. Death, grazing
overflow, and predation will wire into it in subsequent steps.

--- a/config/defaults.yaml
+++ b/config/defaults.yaml
@@ -309,6 +309,20 @@ particles:
   flow_evolution: 0.03       # Temporal drift rate for flow field (lower = slower change)
 
 # -----------------------------------------------------------------------------
+# Detritus (Nutrient Recycling)
+# Dead biomass decays slowly back into the resource grid, creating nutrient
+# cycling and ecosystem inertia. Detritus is deposited on death and from
+# energy overflow; it decays into resource with some loss to heat.
+# -----------------------------------------------------------------------------
+detritus:
+  decay_rate: 0.05             # Fraction of detritus that decays per second
+                               # Higher = faster recycling (0.02-0.08 typical)
+  decay_efficiency: 0.50       # Fraction of decayed detritus converted to resource
+                               # Remainder is lost to heat (0.40-0.70 typical)
+  carcass_fraction: 0.70       # Fraction of organism energy deposited as detritus on death
+                               # Remainder is lost to heat (0.60-0.80 typical)
+
+# -----------------------------------------------------------------------------
 # Archetypes (Founder Templates)
 # Define organism templates that determine initial diet and behavior tendencies.
 # Diet is a continuous heritable trait: 0 = pure herbivore, 1 = pure carnivore.
