Add MaxEnergy field to Energy component (energy economy step 3)
Convert organism energy from implicit 0..1 normalization to absolute units
with an explicit per-organism Max capacity. This is a structural refactor
that enables future morphology-scaled energy (e.g. CPPN-defined MaxEnergy
proportional to body mass) without changing current simulation dynamics.

With max_energy defaulting to 1.0, all values, thresholds, and costs remain
numerically identical to the previous system.

- Add Max float32 to components.Energy; set from config at all 3 entity
  creation sites (spawn, reproduce, hall-of-fame reseed)
- Replace hardcoded 1.0 clamps with energy.Max in UpdateEnergy,
  UpdatePreyForage, grazing in updateEnergy, and TransferEnergy
- Normalize brain energy input to Value/Max (clamp01) so neural networks
  remain stable across different MaxEnergy values
- Normalize rendering alpha and inspector bar to Value/Max
- Add max_energy to EntityConfig and defaults.yaml
- Add MaxEnergy to snapshot EntityState; bump SnapshotVersion to 2

--- a/config/defaults.yaml
+++ b/config/defaults.yaml
@@ -36,7 +36,8 @@ physics:
 # -----------------------------------------------------------------------------
 entity:
   body_radius: 10.0          # Collision/visual radius of entities in world units
-  initial_energy: 0.8        # Starting energy for newly spawned entities (0-1 scale)
+  initial_energy: 0.8        # Starting energy for newly spawned entities (absolute units)
+  max_energy: 1.0            # Maximum energy capacity per organism (absolute units)
 
 # -----------------------------------------------------------------------------
 # Entity Capabilities
