Apply grazing efficiency and route energy overflow to detritus (energy economy step 4)
Previously, forage_efficiency was 1.0 (no digestion loss) and energy that
exceeded the organism's max was silently discarded. Both violated conservation:
removed resource vanished without being accounted for.

- Lower forage_efficiency from 1.0 to 0.80 (eta_graze). 20% of grazed
  resource is now lost to digestion heat, tracked in heatLossAccum.
- Route grazing overflow (energy > Max) to detritus via DepositDetritus
  instead of clamping. This creates spatial nutrient hotspots where organisms
  are over-fed, rather than silently destroying energy.
- Route predation overflow to detritus at predator position. TransferEnergy
  now returns (removed, overflow) so the caller can deposit excess.
- Remove impossible overflow clamp from UpdateEnergy (metabolism only
  subtracts energy, so overflow cannot occur there).

Remaining conservation gaps: metabolism costs and predation transfer
inefficiency are not yet tracked as heat (steps 5-6).

--- a/config/defaults.yaml
+++ b/config/defaults.yaml
@@ -156,7 +156,8 @@ energy:
 # -----------------------------------------------------------------------------
 resource:
   graze_radius: 1            # Grazing kernel radius in cells (1=3x3 kernel, 2=5x5)
-  forage_efficiency: 1.0     # Fraction of removed resource that becomes energy (0-1)
+  forage_efficiency: 0.80    # Fraction of removed resource that becomes energy (eta_graze)
+                             # Remainder is lost to heat (digestion inefficiency)
 
 # -----------------------------------------------------------------------------
 # Potential Field Generation
