Add full conservation accounting to predation transfer (energy economy step 6)
Previously, the 15% transfer inefficiency (1 - transfer_efficiency) silently
disappeared from the system, breaking conservation. Now every unit of energy
removed from prey is explicitly accounted for.

- Add EnergyTransfer struct with Removed, ToGainer, ToDet, ToHeat, Overflow
  fields, following the Transfer() pattern from the energy economy spec
- Refactor TransferEnergy to split removed energy three ways:
  toGainer = eta * removed * (1 - detFrac)
  toDet    = detFrac * removed
  toHeat   = removed - toGainer - toDet
- Add detritus_fraction config (default 0.0) for "messy kills" where a
  fraction of removed energy is deposited as detritus at the prey position.
  This supports future scavenger niches.
- Update updateFeeding to deposit detritus at prey position (ToDet) and
  predator position (Overflow), and track transfer heat loss

With default detritus_fraction=0.0, the predator gets 85% of removed energy
and 15% goes to heat—same behavior as before, but now explicitly tracked in
heatLossAccum rather than silently lost.

--- a/config/defaults.yaml
+++ b/config/defaults.yaml
@@ -140,6 +140,7 @@ energy:
     bite_cost: 0.003         # Energy cost per bite attempt
     bite_reward: 0.50        # Base energy transferred per successful bite
     transfer_efficiency: 0.85 # Fraction of taken energy predator actually receives
+    detritus_fraction: 0.0   # Fraction of removed energy deposited as detritus ("messy kills")
     digest_time: 0.8         # Seconds after a kill before predator can bite again
     accel_cost: 0.010        # Energy cost multiplier for thrust (acceleration penalty)
   # Diet-based interpolation between prey/predator energy economics
