Add hall of fame seeding, prey density cap, and exp10 optimizer parameters
- Add --seed-hof flag and SeedHallOfFamePath game option to seed initial
  brains from a prior run's hall_of_fame.json
- Add LoadHallOfFameFromFile() to read and reconstruct hall of fame state
- Add prey_density_k config: soft carrying capacity where p = K/(N+K), so at
  N=K herbivores have 50% breed probability
- Update optimizer for exp10: lock converged params from exp9, add detritus,
  diet threshold, and prey density parameters

The seeding mechanism allows experiments to start from proven lineages rather
than random brains, while light mutation maintains diversity. The prey soft
cap prevents exponential growth without hard population limits.

--- a/config/defaults.yaml
+++ b/config/defaults.yaml
@@ -104,6 +104,8 @@ reproduction:
   pred_density_k: 0          # Density-dependent predator reproduction: p = prey/(prey+K)
                              # When K > 0, predators breed less when prey are scarce
                              # K=0 disables (default), K=150 is a good starting value
+  prey_density_k: 0          # Soft prey carrying capacity: p = K/(N+K)
+                             # At N=K, 50% breed probability. K=0 disables (default)
   newborn_hunt_cooldown: 2.0 # Seconds before newborn predators can bite
                              # Prevents cascade kills when offspring spawn in prey swarms
 
